--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
+    <!-- ✅ THIS FIXES ALL VERSION ERRORS -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.1</version>
+        <relativePath/>
+    </parent>
 
     <groupId>com.zepto</groupId>
     <artifactId>zepto-automation</artifactId>
@@ -14,7 +22,6 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring.boot.version>3.2.1</spring.boot.version>
     </properties>
 
     <dependencies>
@@ -41,9 +48,11 @@
     </dependencies>
 
     <build>
+        <!-- JAR NAME -->
         <finalName>app</finalName>
 
         <plugins>
+            <!-- Spring Boot Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
